# SDLDemo

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  Player.h  main.cpp
src/app/: App.cpp  App.h
src/entity/: Entity.cpp  Entity.h
src/stage/: Stage.cpp  Stage.h
src/utils/: Log.h  defs.h  glad.c
src/utils/collision/: Collision.cpp  Collision.h
